<resources>
    <string name="app_name">ChangeTheWorld</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="NO">no.</string>
    <string name="don_t_have_">Don\' t have account?</string>
    <string name="register_now">Register now</string>
    <string name="create_new_business">Create a new business account</string>
    <string name="create_account">Create Client Account</string>
    <string name="create_account_button">Create Account</string>
    <string name="create_a_ne">Create a new account</string>
    <string name="fullName">Full Name</string>
    <string name="mailAddress">Mail Address</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="localCurrency">Local Currency</string>
    <string name="uploadPhoto">Profile Photo</string>
    <string name="uploadPassport">Passport</string>
    <string name="already_hav">Already have an account?</string>
    <string name="create_business">Create Business Account</string>
    <string name="businessName">Business Name</string>
    <string name="State">State</string>
    <string name="businessOwnerName">Business Owner Name</string>
    <string name="businessApproval">Business Approval</string>
    <string name="businessOwnerId">Owner Id</string>
    <string name="businessOpenHours">Open Hours</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_">Hello,</string>
    <string name="have_a_nice">Have a nice day!</string>
    <string name="currency_name">currency name</string>
    <string name="value">Value:</string>
    <string name="daily_change">Daily Change:</string>
    <string name="as_client_title">as Client</string>
    <string name="gotoLoginBusiness">Sign in here</string>
    <string name="as_business_title">as Business</string>
    <string name="client_user_title">client user?</string>
    <string name="gotoLoginClient">Not a Business? Login as Client</string>
    <string name="orders_for_today">Your orders for today</string>
    <string name="userName">userName</string>
    <string name="bussiness_user_title">Business user?</string>
    <string name="USD">USD</string>
    <string name="EUR">EUR</string>
    <string name="user_name_invalid">username invalid, please try Again</string>
    <string name="password_invalid">password invalid, please try Again</string>
    <string name="BusinessClient">BusinessClient</string>
    <string name="CNY">CNY</string>
    <string name="ILS">ILS</string>
    <string name="GBP">GBP</string>
    <string name="register">Register</string>
    <string name="choose_Currency">Choose Currency</string>
    <string name="Invalid_full_name">Invalid full name</string>
    <string name="Invalid_mail">Invalid mail</string>
    <string name="Invalid_phone_number">Invalid phone number</string>
    <string name="Invalid_currency">Invalid currency</string>
    <string name="Invalid_personal_picture">Invalid personal picture</string>
    <string name="Invalid_passport_picture">Invalid passport picture</string>
    <string name="image_path">image/*</string>
    <string name="Select_Picture">Select Picture</string>
    <string name="photo_upload_success">Photo Upload Success</string>
    <string name="passport_upload_success">Passport Upload Success</string>
    <string name="choose_state">Choose State</string>
    <string name="england">England</string>
    <string name="united_states">United States</string>
    <string name="china">China</string>
    <string name="italy">Italy</string>
    <string name="israel">Israel</string>
    <string name="invalid_business_name">Invalid business name</string>
    <string name="Invalid_state">Invalid state</string>
    <string name="Invalid_business_approval_document">Invalid business approval document</string>
    <string name="Invalid_business_owner_id">Invalid business owner id</string>
    <string name="Business_Approval_Upload_Success">Business Approval Upload Success</string>
    <string name="Owner_ID_Upload_Success">Owner ID Upload Success</string>
    <string name="PrivateClient">PrivateClient</string>
    <string name="gotoSubWallet">Sub Wallet</string>
    <string name="Date">Date</string>
    <string name="businessAddress">Business Address</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="invalid_business_number">Invalid business number</string>
    <string name="invalid_business_address">Invalid business address</string>
    <string name="deposit">Deposit</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="card_number">Card Number</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_id">Owner Id</string>
    <string name="expire_date">Expire date</string>
    <string name="cvv">CVV</string>
    <string name="withdraw">Withdraw</string>
    <string name="bank_name">Bank Name</string>
    <string name="swift_code">Swift Code</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="currencies_rates">Currencies Rates</string>
    <string name="from_invalid">from amount invalid, please try again</string>
    <string name="carnNumber_invalid">card number invalid, please try again</string>
    <string name="ownerName_invalid">owner name invalid, please try again</string>
    <string name="ownerId_invalid">owner id invalid, please try again</string>
    <string name="expireDate_invalid">expire date invalid, please try again</string>
    <string name="cvv_invalid">cvv invalid, please try again</string>
    <string name="invalid_deposite_amount">Invalid Deposite Amount</string>
    <string name="account_number">Account Number</string>
    <string name="bankName_invalid">bank name invalid, please try again</string>
    <string name="swiftCode_invalid">swift code invalid, please try again</string>
    <string name="accountNumber_invalid">account number invalid, please try again</string>
    <string name="my_wallet">My Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="sunday">Sunday</string>
    <string name="your_e_rate">Your\'e rate</string>
    <string name="local_currency">Local currency</string>
    <string name="rate">rate</string>
    <string name="orders">Orders</string>
    <string name="orders_ft">Orders for today</string>
    <string name="new_orders">new orders</string>
    <string name="cash_orders">cash orders</string>
    <string name="new_rates">new rates</string>
    <string name="you_got">You got</string>
    <string name="new_rates_from_customers">rates from customers</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="invalid_business_city">Invalid business city</string>
    <string name="invalid_business_street">Invalid business street</string>
    <string name="country">Country</string>
    <string name="distance">distance</string>
    <string name="open_close">open/close</string>
    <string name="search_results">Search Results</string>
    <string name="account_info">Account Info</string>
    <string name="exist">Exist</string>
    <string name="update">Update</string>
    <string name="invalid_state_or_city">invalid state or city</string>
    <string name="open_hours">Open Hours</string>
    <string name="Invalid_location">Invalid location</string>
    <string name="Sunday">Sunday:</string>
    <string name="monday_thursday">Monday-Thursday:</string>
    <string name="friday">Friday:</string>
    <string name="saturday">Saturday:</string>
    <string name="exchange_rate">exchange rate</string>
    <string name="sales_rate">Sales rate</string>
    <string name="update_sales_rate">update sales rate</string>
    <string name="new_order">New Order</string>
    <string name="payment_method">Payment method</string>
    <string name="cash">cash</string>
    <string name="wallet">wallet</string>
    <string name="amount">Amount</string>
    <string name="receive">Receive</string>
    <string name="pickup_from">Pickup from</string>
    <string name="pickup_date">Pickup date</string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="Invalid_address">Invalid address</string>
    <string name="Invalid_Address">Invalid Address</string>
    <string name="order_confirm">Order Confirm</string>
    <string name="order_details">Order Details</string>
    <string name="don_t_forget_to_bring_your_id">Don\'t forget to bring your ID !</string>
    <string name="you_can_always">You can always see the order’s details on your orders page!</string>
    <string name="business_user_name">business_user_name</string>
    <string name="client_user_name">client_user_name</string>
    <string name="currencies_must_be_diffrent">currencies must be diffrent</string>
    <string name="Amount_shouldnt_be_zero">Amount shouldn\'t be zero</string>
    <string name="orderID">orderID</string>
    <string name="status">status</string>
    <string name="pickup__from">Pickup From:</string>
    <string name="my_orders">My orders</string>
    <string name="pannding">Pannding</string>
    <string name="cancle">Cancle</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="my_Orders">My Orders</string>
    <string name="you_exchange">You exchange</string>
    <string name="exchanged">Exchanged</string>
    <string name="client_name">Client Name:</string>
    <string name="cancel">Cancel</string>
    <string name="please_rate_business">Please rate Business</string>
    <string name="messageRate1">Sorry to hear that :(</string>
    <string name="messageRate2">you always accept suggestions</string>
    <string name="messageRate3">Good enough!</string>
    <string name="messageRate4">Great! Thank you!</string>
    <string name="messageRate5">Awesome! You are the best!</string>
    <string name="your_rate">Your Rate</string>
    <string name="From_Currency">From Currency</string>
    <string name="To_Currency">To Currency</string>
    <string name="sort">Sort</string>
    <string name="change_the_world">Change The World</string>
    <string name="About_content">Our application is a marketplace that connects people who want to exchange money and the exchangers who provide the exchange services. Thanks to our innovative technology and a digital wallet-based model, the user can deposit money in the app and search for a business anywhere he wants in the world. The user can place an order for now or for a future date. All of this he will be able to do with his money in the app. Money exchange businesses will be able to exchange funds among themselves without help from a third party.</string>
    <string name="Tv_nivMail">vaknin34@gmail.com</string>
    <string name="About_koral">koraldduel3112@gmail.com</string>
    <string name="About_eynav">onevptaya@gmail.com</string>
    <string name="About_yuval">yuval.amir998@gmail.com</string>
    <string name="about_smai">samuelkrief1004@gmail.com</string>
    <string name="performance">Performance</string>
    <string name="num_orders">Number of orders:</string>
    <string name="total_profit">Total Profit:</string>
    <string name="average_per_trade">Average per trade:</string>
    <string name="order">Order</string>
    <string name="rates">Rates</string>


</resources>