<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateBusinessAccount">

        <!-- Create Business Account -->
        <TextView
            android:id="@+id/create_busi"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="61dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="71dp"
            android:fontFamily="sans-serif-black"
            android:gravity="top"
            android:text="@string/create_business"
            android:textAppearance="@style/create_busi" />

        <TextView
            android:id="@+id/create_a_new_business"
            android:layout_width="125dp"
            android:layout_height="17dp"
            android:layout_below="@+id/create_busi"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="140dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="top"
            android:text="@string/create_a_ne"
            android:textAppearance="@style/create_a_ne" />

        <EditText
            android:id="@+id/enterBusinessName"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_below="@+id/create_a_new_business"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="63dp"
            android:background="@drawable/empty_rectangle"
            android:hint="@string/businessName"
            android:paddingStart="50dp"
            android:textColorHint="#11000000"
            android:inputType="text"/>

    </RelativeLayout>
</layout>