<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/homePage_bac">

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardContainer"
        android:layout_width="413dp"
        android:layout_height="73dp"
        android:background="@color/homePage_bac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date_value"
            android:layout_width="75dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/Date"
            android:textAppearance="@style/symbol"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@+id/businessName_title"
            app:layout_constraintHorizontal_bias="0.882"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/businessName"
            android:layout_width="150dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/businessName"
            android:textAppearance="@style/symbol"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@+id/payment_method_value"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/businessName_title"
            android:layout_width="76dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/pickup__from"
            android:textAppearance="@style/symbol"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@+id/businessName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/payment_method_value"
            android:layout_width="70dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/payment_method"
            android:textAppearance="@style/symbol"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/from_currency_value"
            android:layout_width="32dp"
            android:layout_height="22dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/to_currency_value"
            android:layout_width="31dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/received_value"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amount_value"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/comfortaa"
            android:text="amount"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/from_currency_value"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/received_value"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="92dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/receive"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/status_value"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status_value"
            android:layout_width="73dp"
            android:layout_height="31dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/topLine"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/line_design" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/received_value"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/amount_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_value" />

        <TextView
            android:id="@+id/clientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/comfortaa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/status_value"
            app:layout_constraintTop_toBottomOf="@+id/payment_method_value" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>