<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WithdrawPage"
    android:background="@color/homePage_bac">

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="450dp"
        android:layout_height="700dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="-33dp"
        android:background="@drawable/deposit_top" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    </RelativeLayout>

    <TextView
        android:id="@+id/WithdrawTitle"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/withdraw"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/fromTitle"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="295dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/from"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/fromAmount"
        android:layout_width="156dp"
        android:layout_height="54dp"
        android:layout_below="@+id/WithdrawTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="123dp"
        android:inputType="number"
        android:paddingStart="20dp" />

    <TextView
        android:id="@+id/toTitle"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="296dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/to"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/FromCurrency"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="283dp"
        android:layout_marginLeft="283dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="18dp"
        android:text="@string/currency_name"
        android:paddingStart="20dp" />

    <TextView
        android:id="@+id/toAmount"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/fromAmount"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="121dp"
        android:paddingStart="20dp"
        android:text="@string/value" />

    <TextView
        android:id="@+id/toCurrency"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FromCurrency"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="283dp"
        android:layout_marginLeft="283dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="18dp"
        android:paddingStart="20dp"
        android:text="@string/value" />

    <EditText
        android:id="@+id/bankName"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="59dp"
        android:background="@drawable/empty_rectangle"
        android:inputType="text"
        android:paddingStart="20dp" />

    <TextView
        android:id="@+id/bankNameTitle"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_below="@+id/toTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="174dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/bank_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/swiftCode"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swiftCodeTitle"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/empty_rectangle"
        android:inputType="text"
        android:paddingStart="20dp" />

    <TextView
        android:id="@+id/swiftCodeTitle"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="326dp"
        android:layout_marginEnd="172dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/swift_code"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/accountNumber"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountNumberTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/empty_rectangle"
        android:inputType="number"
        android:paddingStart="20dp" />

    <TextView
        android:id="@+id/accountNumberTitle"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="419dp"
        android:layout_marginEnd="168dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/account_number"
        android:textSize="20sp" />

    <Button
        android:id="@+id/depositBtn"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rectangle_7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="114dp"
        android:text="@string/withdraw" />

</RelativeLayout>