<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client_home_page">

    <!-- top white Rectangle  -->

    <!-- Hello, -->

    <ImageView
        android:id="@+id/top_image"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="-21dp"
        android:background="@drawable/round_background2">
    </ImageView>

    <TextView
        android:id="@+id/hello_homep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="66dp"
        android:fontFamily="@font/aclonica"
        android:gravity="top"
        android:text="@string/hello_"
        android:textAppearance="@style/hello_" />

    <!-- userName -->
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="66dp"
        android:fontFamily="@font/aclonica"
        android:gravity="top"
        android:text="@string/username"
        android:textAppearance="@style/hello_" />

    <!-- have a nice day! -->
    <TextView
        android:id="@+id/have_a_nice"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello_homep"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="0dp"
        android:gravity="top"
        android:text="@string/have_a_nice"
        android:textAppearance="@style/have_a_nice" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="375dp"
        android:layout_height="67dp"
        android:layout_below="@+id/top_image"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="183dp"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="661dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="318dp"
            android:layout_height="461dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="250dp"
            tools:ignore="UnknownId" />


    </RelativeLayout>


</RelativeLayout>